# chamber-profiler

./: .gitignore  CONTEXT.md  HANDOFF.md  README.md  pyproject.toml
src/: __init__.py
src/analysis/: __init__.py  bottleneck_detector.py  cost_analyzer.py  executive_summary.py  optimization_advisor.py  report_generator.py  roi_calculator.py
src/chamber/: __init__.py  agent_plugin.py  chamber_client.py  ray_integration.py
src/cli/: __init__.py  main.py
src/profiler/: __init__.py  auto_profiler.py  batch_size_optimizer.py  communication_profiler.py  comparison_profiler.py  data_loading_profiler.py  distributed_profiler.py  flame_graph.py  gpu_profiler.py  io_profiler.py  kernel_tracer.py  memory_analyzer.py  memory_leak_detector.py  ray_profiler.py  regression_detector.py  timeline_generator.py
src/sdk/: __init__.py  decorators.py  profiler_sdk.py
tests/: test_auto_profiler.py  test_batch_size_optimizer.py  test_bottleneck_detector.py  test_cli.py  test_communication_profiler.py  test_comparison_profiler.py  test_cost_analyzer.py  test_data_loading_profiler.py  test_distributed_profiler.py  test_executive_summary.py  test_flame_graph.py  test_gpu_profiler.py  test_io_profiler.py  test_kernel_tracer.py  test_memory_analyzer.py  test_memory_leak_detector.py  test_optimization_advisor.py  test_ray_integration.py  test_ray_profiler.py  test_regression_detector.py  test_report_generator.py  test_roi_calculator.py  test_timeline_generator.py
