[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chamber-profiler"
version = "0.1.0"
description = "One command to profile any ML training job. Zero config. Beautiful output."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "Chamber", email = "eng@usechamber.io"},
]
keywords = ["gpu", "profiling", "ml", "training", "cuda", "pytorch", "chamber"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "rich>=13.0",
    "click>=8.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
all = ["torch>=2.0", "pynvml>=11.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://usechamber.io"
Repository = "https://github.com/chamber-ai/chamber-profiler"
Documentation = "https://docs.usechamber.io/profiler"

[project.scripts]
chamber-profile = "src.cli.main:cli"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
